Cleaned up manual generation with Sphinx

--- a/openatlas/static/manual/search.html
+++ b/openatlas/static/manual/search.html
@@ -174,7 +174,7 @@
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Alexander Watzinger CC-BY 4.0
+        &copy; Copyright 2020, Alexander Watzinger and the OpenAtlas team, CC-BY 4.0
 
     </p>
   </div>
