Manual: event, dates

--- a/sphinx/source/_templates/layout.html
+++ b/sphinx/source/_templates/layout.html
@@ -1,3 +1,10 @@
 {# layout.html #}
 {% extends "!layout.html" %}
 {% set css_files = css_files + ['_static/style.css'] %}
+Hello
+<script type="text/javascript">
+    <!-- Adds target=_blank to external links -->
+    $(document).ready(function () {
+        $('a[href^="http://"], a[href^="https://"]').not('a[class*=internal]').attr('target', '_blank');
+    });
+</script>
