--- a/openatlas/static/manual/menu/source.html
+++ b/openatlas/static/manual/menu/source.html
@@ -174,10 +174,11 @@
 <p>Written sources like for example medieval charters are mapped in OpenAtlas as a combination of
 several entities. On the source index page is an overview of already entered sources with their
 type and description.</p>
+<p>On the index page already entered entities are listed.</p>
 <ul class="simple">
-<li>Click <strong>+ Source</strong> to enter a new source.</li>
-<li>Click on the <strong>name</strong> of an entry in the list to access the detail view.</li>
-<li>To edit an object, click on the <strong>Edit</strong> button in the detail view.</li>
+<li>Click on the <strong>+</strong> button to enter a new one.</li>
+<li>Click on the <strong>name</strong> of an entry in the list to access the <strong>detail view</strong>.</li>
+<li>To edit or delete an entry click on the <strong>Edit</strong> button in the <strong>detail view.</strong></li>
 </ul>
 <p>Form fields:</p>
 <ul class="simple">
