--- a/openatlas/static/manual/tools/profile.html
+++ b/openatlas/static/manual/tools/profile.html
@@ -232,11 +232,18 @@ displayed at the entity view and also all notes will be displayed at the <a clas
 
   <div role="contentinfo">
     <p>
-        &copy; Copyright 2020, Alexander Watzinger and the OpenAtlas team, CC-BY 4.0
 
     </p>
   </div>
-  Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/rtfd/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>. 
+  Built with <a href="http://sphinx-doc.org/">Sphinx</a> using a <a href="https://github.com/rtfd/sphinx_rtd_theme">theme</a> provided by <a href="https://readthedocs.org">Read the Docs</a>.
+        <p>CC-BY 4.0, Alexander Watzinger and the OpenAtlas team</p>
+        <script type="text/javascript">
+            <!-- Adds target=_blank to external links -->
+            $(document).ready(function () {
+                $('a[href^="http://"], a[href^="https://"]').not('a[class*=internal]').attr('target', '_blank');
+            });
+        </script>
+
 
 </footer>
 
