--- a/openatlas/static/manual/menu/place.html
+++ b/openatlas/static/manual/menu/place.html
@@ -215,10 +215,10 @@
 space that can be connected to various other information (temporal, spatial, events, sources etc.).</p>
 <p>To record archaeological information a place can be divided into multiple subunits. The place can be
 understood as the superior unit and container for multiple further features (E.g. buildings, graves,
-pits, ditches, ramparts etc.). They are labelled as “Features” and can be accessed via the features
-tab. They are structured the same way as the place is and may also contain multiple subunits that
-are labelled as “Stratigraphic Units”. The stratigraphic units can again contain multiple subunits
-labelled as finds and again are structured the same way as the superior units.</p>
+pits, ditches, ramparts etc.). They are labelled as <strong>Feature</strong> and can be accessed via the
+features tab. They are structured the same way as the place is and may also contain multiple
+subunits that are labelled as <strong>Stratigraphic Unit</strong>. The stratigraphic units can again contain
+multiple subunits labelled as <strong>Find</strong> and again are structured the same way as the superior units.</p>
 <p>One example would be a graveyard. It will be the superior unit (Place). Each grave of this cemetery
 is a (sub) feature that forms part of the cemetery. Each grave is composed of one or many subunits
 (stratigraphic units). This would be the burials in the very grave (e.g. a primary and a secondary
@@ -227,7 +227,7 @@ respective unit: e.g. the grave goods of one of the burials, the finds found in 
 <img alt="../_images/sub_unit.jpg" src="../_images/sub_unit.jpg" />
 <p>Also Human remains can be recorded in detail, especially for anthropological analyses. This way
 each bone (resp. part of the human remains) can be recorded as subunits of stratigraphic units
-labelled as “Human Remains”.</p>
+labelled as <strong>Human Remains</strong>.</p>
 </div>
 </div>
 
