Update changelog, ugrade notes and manual

--- a/openatlas/static/manual/admin/content.html
+++ b/openatlas/static/manual/admin/content.html
@@ -178,7 +178,7 @@
 <p>Displayed texts in available languages can be customized here:</p>
 <ul class="simple">
 <li><strong>Intro</strong> - displayed at the top at the start page before logging in</li>
-<li><strong>Contact</strong> - displayed at the contact site, e.g. the webmaster and project lead</li>
+<li><strong>Contact</strong> - displayed at the contact site, e.g. contact information for the website maintainer</li>
 <li><strong>Legal notice</strong> - displayed at the legal notice site, e.g. information about the institute</li>
 </ul>
 <p>Links to <strong>Contact</strong> and <strong>Legal notice</strong> are available in the menu if they contain text.</p>
