Update manual with new features

--- a/openatlas/static/manual/admin/content.html
+++ b/openatlas/static/manual/admin/content.html
@@ -184,6 +184,12 @@
 <li><strong>Citation example</strong> - displayed under the form at insert/update of an edition or a bibliography</li>
 </ul>
 <p>Links to <strong>Contact</strong> and <strong>Legal notice</strong> are available in the menu if they contain text.</p>
+<p>For frontends (presentation sites, if available) shown text can be set with:</p>
+<ul class="simple">
+<li><strong>Intro for frontend</strong></li>
+<li><strong>Contact for frontend</strong></li>
+<li><strong>Legal notice for frontend</strong></li>
+</ul>
 </div>
 
 
