Update changelog and manual with image processing

--- a/openatlas/static/manual/admin/general.html
+++ b/openatlas/static/manual/admin/general.html
@@ -194,6 +194,7 @@
 <li><strong>Reset confirm hours</strong> - how long a requested password reset code is valid</li>
 <li><strong>Failed logins</strong> - how often it could be tried to login with a specific username</li>
 <li><strong>Failed login forget minutes</strong> - minutes to wait after failed logins are exceeded</li>
+<li><strong>Image processing</strong> - if activated preview images for detail and table views are generated</li>
 </ul>
 </div>
 </div>
