--- a/openatlas/static/manual/admin/user.html
+++ b/openatlas/static/manual/admin/user.html
@@ -204,13 +204,13 @@ the system if <strong>Send account information</strong> is checked.</p>
 <p>Guest is the default for users who aren’t logged in.</p>
 <table class="docutils align-default">
 <colgroup>
-<col style="width: 28%" />
-<col style="width: 9%" />
-<col style="width: 12%" />
+<col style="width: 33%" />
+<col style="width: 8%" />
+<col style="width: 11%" />
 <col style="width: 10%" />
-<col style="width: 19%" />
-<col style="width: 14%" />
-<col style="width: 9%" />
+<col style="width: 17%" />
+<col style="width: 13%" />
+<col style="width: 8%" />
 </colgroup>
 <thead>
 <tr class="row-odd"><th class="head"></th>
@@ -235,7 +235,7 @@ the system if <strong>Send account information</strong> is checked.</p>
 <td><p>yes</p></td>
 <td><p>yes</p></td>
 <td><p>yes</p></td>
-<td><p>yes</p></td>
+<td><p>yes*</p></td>
 <td></td>
 <td></td>
 </tr>
@@ -255,7 +255,7 @@ the system if <strong>Send account information</strong> is checked.</p>
 <td></td>
 <td></td>
 </tr>
-<tr class="row-even"><td><p>Import/Export</p></td>
+<tr class="row-even"><td><p>Add reference systems</p></td>
 <td><p>yes</p></td>
 <td><p>yes</p></td>
 <td></td>
@@ -263,7 +263,7 @@ the system if <strong>Send account information</strong> is checked.</p>
 <td></td>
 <td></td>
 </tr>
-<tr class="row-odd"><td><p>User management</p></td>
+<tr class="row-odd"><td><p>Import/Export</p></td>
 <td><p>yes</p></td>
 <td><p>yes</p></td>
 <td></td>
@@ -271,7 +271,15 @@ the system if <strong>Send account information</strong> is checked.</p>
 <td></td>
 <td></td>
 </tr>
-<tr class="row-even"><td><p>Site settings</p></td>
+<tr class="row-even"><td><p>User management</p></td>
+<td><p>yes</p></td>
+<td><p>yes</p></td>
+<td></td>
+<td></td>
+<td></td>
+<td></td>
+</tr>
+<tr class="row-odd"><td><p>System settings</p></td>
 <td><p>yes</p></td>
 <td></td>
 <td></td>
@@ -281,6 +289,7 @@ the system if <strong>Send account information</strong> is checked.</p>
 </tr>
 </tbody>
 </table>
+<p>* Contributors can edit all entries but can only delete their own.</p>
 </div>
 </div>
 
