--- a/openatlas/static/manual/entity/event.html
+++ b/openatlas/static/manual/entity/event.html
@@ -187,7 +187,7 @@
 <ul class="simple">
 <li><p><strong>Activity</strong> - the most common, e.g. a battle, a meeting or a wedding</p></li>
 <li><p><strong>Acquisition</strong> - mapping a change of property</p></li>
-<li><p><strong>Event</strong> - used for event not performed by actors, e.g. natural disaster</p></li>
+<li><p><strong>Event</strong> - used for events not performed by actors, e.g. a natural disaster</p></li>
 <li><p><strong>Move</strong> - movement of artifacts or persons</p></li>
 <li><p><strong>Production</strong> - creation of artifacts</p></li>
 </ul>
